--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@
     /* font-size: 120px; */
 }
 
+.date{
+    font-size:20px;
+    text-align: center;
+   
+}
+
 .clock{
     width: 100%;
     height: 100%;
@@ -56,6 +62,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 0%;
 }
 
 .clock span{
@@ -67,7 +74,5 @@
 
 }
 
-#semi{
-    color:black;
-}
+
 
