--- a/style.css
+++ b/style.css
@@ -46,16 +46,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color:white;
-    /* font-size: 120px; */
 }
 
 .date{
-    font-size:20px;
+    font-size:30px;
     text-align: center;
    
 }
 
-.clock{
+.time{
     width: 100%;
     height: 100%;
     background: rgba(255, 0, 255, 0.);
@@ -65,13 +64,12 @@
     margin-top: 0%;
 }
 
-.clock span{
+.time span{
     font-size:80px;
     width: 110px;
     display: inline-block;
     text-align: center;
     position: relative;
-
 }
 
 
